// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSwitch should render correctly 1`] = `
<DocumentFragment>
  <label
    class="bpk-switch"
  >
    <input
      aria-label="Switch"
      class="bpk-switch__checkbox"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="bpk-switch__switch"
    />
  </label>
</DocumentFragment>
`;

exports[`BpkSwitch should render correctly when checked 1`] = `
<DocumentFragment>
  <label
    class="bpk-switch"
  >
    <input
      aria-label="Switch"
      checked=""
      class="bpk-switch__checkbox"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="bpk-switch__switch"
    />
  </label>
</DocumentFragment>
`;

exports[`BpkSwitch should render small switch 1`] = `
<DocumentFragment>
  <label
    class="bpk-switch"
  >
    <input
      aria-label="Switch"
      class="bpk-switch__checkbox"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="bpk-switch__switch bpk-switch__switch--small"
    />
  </label>
</DocumentFragment>
`;

exports[`BpkSwitch should support arbitrary props 1`] = `
<DocumentFragment>
  <label
    class="bpk-switch"
  >
    <input
      aria-label="Switch"
      class="bpk-switch__checkbox"
      testid="123"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="bpk-switch__switch"
    />
  </label>
</DocumentFragment>
`;

exports[`BpkSwitch should support custom class names 1`] = `
<DocumentFragment>
  <label
    class="bpk-switch custom-classname"
  >
    <input
      aria-label="Switch"
      class="bpk-switch__checkbox"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="bpk-switch__switch"
    />
  </label>
</DocumentFragment>
`;
